[package]
name = "rogue-2d"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = "1.12.0"
bevy = "0.13.2"
bevy_ineffable = "0.5.0"
bevy_pancam = "0.11.1"
bevy_rapier2d = { version = "0.26", features = [ "simd-stable", "debug-render-2d" ] }
bevy_spritesheet_animation = "0.1.0"
image = { version = "0.24.9",features = ["rayon"] }
noise = { version = "0.9.0" }
rand = "0.8.5"
rayon = "1.10.0"
spiral = "0.2.1"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
